
*main changes and additions*

* Numerous bugfixes.
* Time Series Analysis model (tsa)
  - Vector Autoregression Models VAR (tsa.VAR)
  - Autogressive Models AR (tsa.AR)
  - Autoregressive Moving Average Models ARMA (tsa.ARMA) :
      optionally uses Cython for Kalman Filtering
      use setup.py install with option --with-cython
* Improved maximum likelihood framework uses all available scipy.optimize solvers
* Refactor of the datasets sub-package.
* Added Nile River dataset.
* Removed RPy dependency for running the test suite.
* Refactored the test suite.
* Refactored codebase/directory structure.
* Support for offset and exposure in GLM.
* Removed data_weights argument to GLM.fit for Binomial models.
* New statistical tests, especially diagnostic and specification tests
* Multiple test correction
* General Method of Moment framework in sandbox
* Improved documentation
* and other additions


trunk for 0.2.0
---------------

*main changes*

 * renames for more consistency
   RLM.fitted_values -> RLM.fittedvalues
   GLMResults.resid_dev -> GLMResults.resid_deviance
 * GLMResults, RegressionResults: 
   lazy calculations, convert attributes to properties with _cache
 * fix tests to run without rpy
 * expanded examples in examples directory
 * add PyDTA to lib.io -- functions for reading Stata *.dta binary files 
   and converting
   them to numpy arrays
 * made tools.categorical much more robust
 * add_constant now takes a prepend argument
 * fix GLS to work with only a one column design

*new*

 * add four new datasets
    - A dataset from the American National Election Studies (1996)
    - Grunfeld (1950) investment data
    - Spector and Mazzeo (1980) program effectiveness data
    - A US macroeconomic dataset
 * add four new Maximum Likelihood Estimators for models with a discrete 
   dependent variables with examples
    - Logit
    - Probit
    - MNLogit (multinomial logit)
    - Poisson

*sandbox*

 * add qqplot in sandbox.graphics